Gramatica.txt
INICIO -> INSTRUCCIONES

INSTRUCCIONES -> INSTRUCCION INSTRUCCIONES2

INSTRUCCIONES2 -> INSTRUCCION INSTRUCCIONES2
                | Epsilon << EOF >>

INSTRUCCION -> NOMBRARRED
             | CREARCURSO
             | IMPRIMIRSINSALTO
             | IMPRIMIRCONSALTO
             | CURSOSPORSEMESTRE
             | CURSOPORCODIGO
             | CURSOPORNOMBRE 
             | CURSOSPRERREQUISITOS
             | CURSOSPOSTRREQUISITOS
             | GENERARRED 

NOMBRARRED -> tk_nombre_de_red tk_parentesisa tk_cadena tk_parentesisc tk_puntoycoma
CREARCURSO -> tk_crearcurso tk_parentesisa tk_entero tk_coma tk_entero tk_coma tk_cadena tk_coma tk_ARREGLO tk_parentesisc tk_puntoycoma
IMPRIMIRSINSALTO -> tk_consola tk_parentesisa tk_entero tk_parentesisc tk_puntoycoma
IMPRIMIRCONSALTO -> tk_consolaln tk_parentesisa tk_entero tk_parentesisc tk_puntoycoma
CURSOSPORSEMESTRE -> tk_cursosporsemestre tk_parentesisa tk_entero tk_parentesisc tk_puntoycoma
CURSOPORCODIGO -> tk_cursoPorCodigo tk_parentesisa tk_entero tk_parentesisc tk_puntoycoma
CURSOPORNOMBRE -> tk_cursoPorNombre tk_parentesisa tk_cadena tk_parentesisc tk_puntoycoma
CURSOSPRERREQUISITOS -> tk_cursosPrerrequisitos tk_parentesisa tk_entero tk_parentesisc tk_puntoycoma
CURSOSPOSTRREQUISITOS -> tk_cursosPostrrequisitos tk_parentesisa tk_entero tk_parentesisc tk_puntoycoma
GENERARRED -> tk_generarRed tk_parentesisa tk_cadena tk_parentesisc tk_puntoycoma

ARREGLO -> tk_corchetea LISTAENTEROS tk_corchetec

LISTAENTEROS -> tk_entero LISTAENTEROS2 
              | Epsilon (tk_corchetec)

LISTAENTEROS2 -> tk_coma tk_entero LISTAENTEROS2
               | Epsilon (tk_corchetec)
